--- a/jaksim_ios/Home/Base.lproj/Main.storyboard
+++ b/jaksim_ios/Home/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                         <cells/>
                                     </collectionView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="4nb-qJ-XaV">
-                                        <rect key="frame" x="20" y="292" width="374" height="1040.5"/>
+                                        <rect key="frame" x="20" y="292" width="374" height="1031.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘의 한마디" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIM-CW-fWb">
                                                 <rect key="frame" x="0.0" y="0.0" width="93" height="20.5"/>
@@ -51,14 +51,16 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="실패란 넘어지는 것이 아니라, 넘어진 자리에 머무는 것이다." borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2uP-4F-HV3">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="실패란 넘어지는 것이 아니라, 넘어진 자리에 머무는 것이다." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="55O-pH-fm3">
                                                 <rect key="frame" x="0.0" y="44.5" width="374" height="76"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="76" id="1Ov-Gv-9QJ"/>
+                                                    <constraint firstAttribute="height" constant="76" id="Tky-w0-1v7"/>
                                                 </constraints>
+                                                <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rYy-d9-s4I" userLabel="CategoryList Collection View">
                                                 <rect key="frame" x="0.0" y="144.5" width="374" height="210"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -74,28 +76,29 @@
                                                 <cells/>
                                             </collectionView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="jBJ-rE-CBb">
-                                                <rect key="frame" x="0.0" y="378.5" width="374" height="30"/>
+                                                <rect key="frame" x="0.0" y="378.5" width="374" height="21"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="추천 모임" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zof-J8-TZJ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="187" height="30"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="187" height="21"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ICu-mn-Rjn">
-                                                        <rect key="frame" x="187" y="0.0" width="187" height="30"/>
+                                                        <rect key="frame" x="187" y="0.0" width="187" height="21"/>
                                                         <state key="normal" title="전체보기"/>
                                                     </button>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="ICu-mn-Rjn" firstAttribute="centerY" secondItem="jBJ-rE-CBb" secondAttribute="centerY" id="GMy-Ii-KkZ"/>
                                                     <constraint firstAttribute="trailing" secondItem="ICu-mn-Rjn" secondAttribute="trailing" id="GlF-Ga-rOw"/>
+                                                    <constraint firstAttribute="height" constant="21" id="Qt9-3m-bZr"/>
                                                     <constraint firstItem="zof-J8-TZJ" firstAttribute="leading" secondItem="jBJ-rE-CBb" secondAttribute="leading" id="f6X-y1-0gR"/>
                                                     <constraint firstItem="zof-J8-TZJ" firstAttribute="centerY" secondItem="jBJ-rE-CBb" secondAttribute="centerY" id="uvZ-7b-2UQ"/>
                                                 </constraints>
                                             </stackView>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iNZ-b7-0ev">
-                                                <rect key="frame" x="0.0" y="432.5" width="374" height="460"/>
+                                                <rect key="frame" x="0.0" y="423.5" width="374" height="460"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="460" id="4xj-AT-Jio"/>
@@ -109,15 +112,17 @@
                                                 <cells/>
                                             </collectionView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BOy-Bm-Cmd">
-                                                <rect key="frame" x="0.0" y="916.5" width="374" height="50"/>
+                                                <rect key="frame" x="0.0" y="907.5" width="374" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="b3O-TH-RF9"/>
                                                 </constraints>
                                                 <inset key="titleEdgeInsets" minX="25" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                <state key="normal" title="작심 소개"/>
+                                                <state key="normal" title="작심 소개">
+                                                    <color key="titleColor" systemColor="systemOrangeColor"/>
+                                                </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Guh-Dq-WIs">
-                                                <rect key="frame" x="0.0" y="990.5" width="374" height="50"/>
+                                                <rect key="frame" x="0.0" y="981.5" width="374" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Kuw-cs-wDp"/>
                                                 </constraints>
@@ -126,15 +131,15 @@
                                             </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="2uP-4F-HV3" firstAttribute="leading" secondItem="4nb-qJ-XaV" secondAttribute="leading" id="3Rm-dC-Wdk"/>
                                             <constraint firstItem="rYy-d9-s4I" firstAttribute="width" secondItem="4nb-qJ-XaV" secondAttribute="width" id="Gso-DW-9aA"/>
                                             <constraint firstItem="BOy-Bm-Cmd" firstAttribute="leading" secondItem="4nb-qJ-XaV" secondAttribute="leading" id="J7W-mD-RXV"/>
                                             <constraint firstItem="jBJ-rE-CBb" firstAttribute="width" secondItem="4nb-qJ-XaV" secondAttribute="width" id="Jr1-TK-mDF"/>
-                                            <constraint firstAttribute="trailing" secondItem="2uP-4F-HV3" secondAttribute="trailing" id="Jzl-9Q-43P"/>
                                             <constraint firstAttribute="trailing" secondItem="Guh-Dq-WIs" secondAttribute="trailing" id="KT6-UT-9Or"/>
                                             <constraint firstAttribute="trailing" secondItem="BOy-Bm-Cmd" secondAttribute="trailing" id="P9z-qk-fFB"/>
                                             <constraint firstItem="Guh-Dq-WIs" firstAttribute="leading" secondItem="4nb-qJ-XaV" secondAttribute="leading" id="c52-bT-wTr"/>
+                                            <constraint firstAttribute="trailing" secondItem="55O-pH-fm3" secondAttribute="trailing" id="cdN-rB-hpM"/>
                                             <constraint firstItem="iNZ-b7-0ev" firstAttribute="width" secondItem="4nb-qJ-XaV" secondAttribute="width" id="dWS-We-XHb"/>
+                                            <constraint firstItem="55O-pH-fm3" firstAttribute="leading" secondItem="4nb-qJ-XaV" secondAttribute="leading" id="rqh-TZ-Yiw"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
@@ -166,34 +171,19 @@
                     <tabBarItem key="tabBarItem" systemItem="mostViewed" id="4eu-64-4n7"/>
                     <connections>
                         <outlet property="categoryListCollectionView" destination="rYy-d9-s4I" id="THj-eO-1Fi"/>
-                        <outlet property="faqButton" destination="Guh-Dq-WIs" id="Xse-3I-PYa"/>
-                        <outlet property="introductionButton" destination="BOy-Bm-Cmd" id="Yf3-Ug-kg5"/>
+                        <outlet property="faqButton" destination="Guh-Dq-WIs" id="lSW-CL-9ez"/>
+                        <outlet property="introductionButton" destination="BOy-Bm-Cmd" id="Ett-Va-2HE"/>
                         <outlet property="meetingListCollectionView" destination="dRc-g8-bux" id="1fm-e6-isv"/>
                         <outlet property="recommendedMeetingButton" destination="ICu-mn-Rjn" id="lRa-FB-Mfr"/>
                         <outlet property="recommendedMeetingLabel" destination="zof-J8-TZJ" id="Bf1-ka-Btq"/>
                         <outlet property="recommendedMeetingListCollectionView" destination="iNZ-b7-0ev" id="V8U-CI-h8c"/>
-                        <outlet property="sayingOfToday" destination="2uP-4F-HV3" id="QI9-s9-yCq"/>
+                        <outlet property="sayingOfToday" destination="55O-pH-fm3" id="dzC-kM-DvQ"/>
                         <outlet property="sayingOfTodayLabel" destination="cIM-CW-fWb" id="dVa-OL-DIE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1142" y="94"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="cUv-1O-xFk">
-            <objects>
-                <viewController id="O8L-Di-y7t" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7ZY-xY-aXK">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="y45-C5-8Wc"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fz2-e5-N12" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2566" y="23"/>
         </scene>
         <!--ProfileViewController-->
         <scene sceneID="RWF-j6-DCC">
@@ -248,8 +238,14 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
