--- a/jaksim_ios/Home/CategoryListCollectionViewCell.xib
+++ b/jaksim_ios/Home/CategoryListCollectionViewCell.xib
@@ -16,41 +16,56 @@
                 <rect key="frame" x="0.0" y="0.0" width="69" height="97"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3B5-m2-usT">
-                        <rect key="frame" x="19" y="77" width="31" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="cxI-wA-Dd2"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cvh-QX-9Ix">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cBZ-f0-aRT">
                         <rect key="frame" x="0.0" y="0.0" width="69" height="69"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3B5-m2-usT">
+                                <rect key="frame" x="19" y="77" width="31" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="cxI-wA-Dd2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cvh-QX-9Ix">
+                                <rect key="frame" x="14.5" y="14.5" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="AaE-qQ-Cjh"/>
+                                    <constraint firstAttribute="height" constant="40" id="OLj-9c-3qs"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="69" id="AaE-qQ-Cjh"/>
-                            <constraint firstAttribute="height" constant="69" id="OLj-9c-3qs"/>
+                            <constraint firstItem="cvh-QX-9Ix" firstAttribute="leading" secondItem="cBZ-f0-aRT" secondAttribute="leading" constant="14.5" id="2ak-EC-0Jy"/>
+                            <constraint firstAttribute="height" constant="69" id="NBy-Vn-Aei"/>
+                            <constraint firstItem="cvh-QX-9Ix" firstAttribute="top" secondItem="cBZ-f0-aRT" secondAttribute="top" constant="14.5" id="gbR-Ak-Sir"/>
+                            <constraint firstAttribute="width" constant="69" id="mYb-RF-bfu"/>
+                            <constraint firstItem="3B5-m2-usT" firstAttribute="centerX" secondItem="cBZ-f0-aRT" secondAttribute="centerX" id="oRt-xd-rMl"/>
                         </constraints>
-                    </imageView>
+                    </view>
                 </subviews>
             </view>
             <color key="backgroundColor" systemColor="systemPinkColor"/>
             <constraints>
-                <constraint firstItem="3B5-m2-usT" firstAttribute="top" secondItem="cvh-QX-9Ix" secondAttribute="bottom" constant="8" id="4t8-PB-bhS"/>
-                <constraint firstItem="3B5-m2-usT" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Fgc-cj-9He"/>
-                <constraint firstItem="cvh-QX-9Ix" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Ji1-lh-FXn"/>
-                <constraint firstAttribute="bottom" secondItem="3B5-m2-usT" secondAttribute="bottom" id="T3M-9B-o9C"/>
-                <constraint firstItem="cvh-QX-9Ix" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="k9W-BE-vaQ"/>
+                <constraint firstItem="cBZ-f0-aRT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0WC-kN-YBC"/>
+                <constraint firstItem="cBZ-f0-aRT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="dmN-Vg-BWO"/>
+                <constraint firstAttribute="bottom" secondItem="3B5-m2-usT" secondAttribute="bottom" id="jZ0-Yd-oGI"/>
             </constraints>
             <size key="customSize" width="69" height="97"/>
             <connections>
                 <outlet property="imageView" destination="cvh-QX-9Ix" id="Yug-Wy-Ous"/>
                 <outlet property="name" destination="3B5-m2-usT" id="pJ1-9V-eqT"/>
+                <outlet property="view" destination="cBZ-f0-aRT" id="e6F-eb-46i"/>
             </connections>
             <point key="canvasLocation" x="41.304347826086961" y="124.21875"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
