--- a/jaksim_ios/Home/RecommendedMeetingListCollectionViewCell.xib
+++ b/jaksim_ios/Home/RecommendedMeetingListCollectionViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gTV-IL-0wX" customClass="RecommendedMeetingListCollectionViewCell" customModule="jaksim_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="208"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RecommendedMeetingListCollectionViewCell" customModule="jaksim_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="208"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bT0-8G-SMc">
@@ -23,13 +23,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="한 줄 소개 입니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXJ-PN-PEn">
-                        <rect key="frame" x="0.0" y="158" width="150" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#달리기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLx-6b-Mns">
-                        <rect key="frame" x="0.0" y="187" width="150" height="21"/>
+                        <rect key="frame" x="0.0" y="158" width="116" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -65,23 +59,24 @@
                             <constraint firstItem="nq8-Mq-VGg" firstAttribute="leading" secondItem="fgv-kG-yMM" secondAttribute="leading" constant="6" id="ZIC-vu-bCs"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#달리기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLx-6b-Mns">
+                        <rect key="frame" x="0.0" y="181" width="54.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" systemColor="systemGreenColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="bT0-8G-SMc" secondAttribute="trailing" id="3wd-cv-TL5"/>
-                <constraint firstItem="bT0-8G-SMc" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="5Gk-FC-1t9"/>
-                <constraint firstAttribute="trailing" secondItem="IXJ-PN-PEn" secondAttribute="trailing" id="5no-ES-eX4"/>
-                <constraint firstItem="bT0-8G-SMc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9Ky-AF-vNl"/>
-                <constraint firstItem="IXJ-PN-PEn" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Bx8-mw-GXN"/>
-                <constraint firstAttribute="bottom" secondItem="iLx-6b-Mns" secondAttribute="bottom" id="DEX-Wa-gtL"/>
-                <constraint firstItem="iLx-6b-Mns" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Jdb-Mo-Kav"/>
-                <constraint firstAttribute="top" secondItem="bT0-8G-SMc" secondAttribute="top" id="Rna-pG-D2I"/>
-                <constraint firstAttribute="trailing" secondItem="iLx-6b-Mns" secondAttribute="trailing" id="a1s-9a-TCm"/>
-                <constraint firstItem="iLx-6b-Mns" firstAttribute="top" secondItem="IXJ-PN-PEn" secondAttribute="bottom" constant="8" id="jnX-mZ-XCY"/>
-                <constraint firstItem="IXJ-PN-PEn" firstAttribute="top" secondItem="bT0-8G-SMc" secondAttribute="bottom" constant="8" id="og0-tn-DIn"/>
-                <constraint firstItem="fgv-kG-yMM" firstAttribute="trailing" secondItem="bT0-8G-SMc" secondAttribute="trailing" constant="-8" id="uzc-Ui-fss"/>
-                <constraint firstItem="fgv-kG-yMM" firstAttribute="bottom" secondItem="bT0-8G-SMc" secondAttribute="bottom" constant="-8" id="zm6-uc-4My"/>
+                <constraint firstItem="IXJ-PN-PEn" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="073-mP-QRH"/>
+                <constraint firstAttribute="trailing" secondItem="fgv-kG-yMM" secondAttribute="trailing" constant="8" id="8LP-W2-peX"/>
+                <constraint firstItem="bT0-8G-SMc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="LXR-eC-sBR"/>
+                <constraint firstItem="iLx-6b-Mns" firstAttribute="top" secondItem="IXJ-PN-PEn" secondAttribute="bottom" constant="2" id="RN7-cY-gMo"/>
+                <constraint firstItem="bT0-8G-SMc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="eBe-ne-p4F"/>
+                <constraint firstItem="bT0-8G-SMc" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="gaT-nO-qMp"/>
+                <constraint firstItem="fgv-kG-yMM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="122" id="lry-PP-MdC"/>
+                <constraint firstItem="iLx-6b-Mns" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="vpG-8C-F8f"/>
+                <constraint firstItem="IXJ-PN-PEn" firstAttribute="top" secondItem="bT0-8G-SMc" secondAttribute="bottom" constant="8" id="zRy-j6-9Ih"/>
             </constraints>
             <size key="customSize" width="333" height="244"/>
             <connections>
@@ -98,9 +93,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
