Feat: '참여중인 모임 리스트' UI 추가
- '참여중인 모임 리스트' UI 추가

--- a/MyRecord/MyRecord.storyboard
+++ b/MyRecord/MyRecord.storyboard
@@ -34,18 +34,36 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u6m-Ic-J42">
+                                <rect key="frame" x="0.0" y="44" width="414" height="180"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="uPO-Pm-f3B"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OSv-6u-oqF">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Eva-cs-tLV" secondAttribute="bottom" id="6LS-2z-lfs"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="u6m-Ic-J42" secondAttribute="trailing" id="DXd-bg-fVT"/>
+                            <constraint firstItem="u6m-Ic-J42" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Per-RE-lRZ"/>
                             <constraint firstItem="Eva-cs-tLV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="kLK-lo-vrZ"/>
+                            <constraint firstItem="u6m-Ic-J42" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="udF-eM-OpR"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Eva-cs-tLV" secondAttribute="trailing" id="xed-CD-Sot"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="qmY-cG-0gj"/>
                     <connections>
                         <outlet property="calendarView" destination="Eva-cs-tLV" id="9cx-Rq-zdS"/>
+                        <outlet property="meetingListCollectionView" destination="u6m-Ic-J42" id="z0Q-IC-3fk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
